--- a/form.html
+++ b/form.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html> <!--informar a vesrão do html-->
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8"/> <!--o meta é uma tag orfã (única). A boa prática recomenda fechá-la com /-->
 	<title>Formulário</title>
+	<link rel="stylesheet" href="resources/css/bootstrap.css">
+	<style type="text/css">
+		* {
+			margin: 0px;
+			padding: 0px;
+			width: 100%;
+		}
+		#dadospessoais {
+			margin: 5px;
+			padding: 5px;
+			width: 100%
+			background-color: pink; 
+		}
+	</style>
 </head>
 <body>
-	<!--declaração de formulário-->
-	<form method="get" action="arquivo.php">
-		<fieldset>
-			<legend>Dados Pessoais</legend>
 
+	<div class="container" style="background-color: lightblue; margin: 10px; padding: 10px;"> <!-- Início da div container -->
+	
+	<form method="get" action="arquivo.php">
+		
+		<fieldset>
+			
+			<div id="dadospessoais"><!-- Início da div 'dadospessoais' -->
+			<legend>Dados Pessoais</legend>			
 			<label for="nome">Nome:</label>
 			<input type="text" id="nome" name="nome" 
 			maxlength="30" size="30" 
@@ -56,11 +75,13 @@
 			<input type="number" id="idade" name="idade" min="18" max="30" step="0.1" />
 			<br>
 			<br>
+		</div> <!-- Fim da div 'dados pessoais' -->
 
-			<label for="avalia">Avaliação</label>
+			<label for="avalia"> <b>Avaliação</b></label>
 			<input type="range" id="avalia" name="avalia" min="0" max="10" value="10" />
 			<br>
 			<br>
+		
 
 			<fieldset>
 				<legend>Preferências</legend>
@@ -116,6 +137,7 @@
 			<br>
 
 		</fieldset>
+		
 		<br>
 		<br>
 
@@ -123,5 +145,6 @@
 			<button type="reset">Limpar</button>
 		
 	</form>
+	</div> <!-- fim da div container -->
 </body>
 </html>
